--- a/package.json
+++ b/package.json
@@ -1,3 +1,15 @@
-"scripts": {
-  "start": "node server.js"
+{
+  "name": "your-app-name",
+  "version": "1.0.0",
+  "description": "Your app description",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    // Your dependencies go here
+  },
+  "engines": {
+    "node": ">=12.0.0"
+  }
 }
